<resources>
    <string name="app_name">Foogro</string>
    <string name="label_phone_number">Username</string>
    <string name="email">Email</string>
    <string name="hint_enter_phone_number">Enter Username</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_signup">New User? Signup here</string>
    <string name="register">Register</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="error">Something error occured</string>
    <string name="update_success">Updated Successfully</string>
    <string name="Restaurants">Restaurants</string>
    <string name="orders">My Orders</string>
    <string name="profile">My Account</string>
    <string name="signout">Log Out</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="food_quotes">Good food is Good Mood</string>
    <string name="no_items">Sorry, No Foods available</string>
    <string name="no_order">Sorry, No orders now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="address">Address</string>
    <string name="label_to_pay">Grand Total</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="proceed_to_order">Proceed to Order</string>
    <string name="check_out">Check Out</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="label_update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>