<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_online_groceris" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center|start"
                android:paddingTop="3dp"
                android:text="Welcome to\n FooGro"
                android:textAppearance="@style/AppbarTitle"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccentLight1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingTop="3dp"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="#000000"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:paddingTop="3dp"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="#000000"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_eye_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:padding="8dp"
                android:src="@drawable/ic_eye_visible" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Login"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/black" />


        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center|center_horizontal"
            android:paddingTop="3dp"
            android:text="@string/new_signup"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_no_internet"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:name="com.example.foodappandroid.ui.nointernet.NoInternetFragment"
        android:layout_height="match_parent" />


</RelativeLayout>