<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderSummaryActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/CustomToolbarTheme"
                app:collapsedTitleTextAppearance="@style/AppbarTitle2"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleTextAppearance="@style/AppbarTitle1"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="@string/check_out">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/colorAccentLight1" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f2f2f2" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f2f2f2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Delivery Address"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#f2f2f2" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/captionColor"
                        android:textSize="13sp"
                        tools:text="Order Summary \nasdhasjd \nasdgahsd" />

                    <TextView
                        android:id="@+id/tv_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:drawableLeft="@drawable/ic_edit"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Edit"
                        android:textAllCaps="false"
                        android:textColor="@color/captionColor"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#f2f2f2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Order Summary"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#f2f2f2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_food_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clipToPadding="false"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_order_summary">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_total"
        android:background="#EAEAEA" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/layout_total"
        android:background="#f2f2f2" />

    <TextView
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccentLight1"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/confirm_order"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_update"
        android:orientation="horizontal"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image_veg"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:src="@drawable/ic_info"
            app:tint="@color/colorAccent" />


        <TextView
            android:id="@+id/text_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center|start"
            android:text="@string/total_to_pay"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/layoutQuantityControl"
            layout="@layout/add_cart_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center|end"
            android:minWidth="60dp"
            android:text="₹50"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_no_internet"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:name="com.example.foodappandroid.ui.nointernet.NoInternetFragment"
        android:layout_height="match_parent" />



</RelativeLayout>